Update memcached template for latest puppet

--- a/memcached/templates/sysconfig.erb
+++ b/memcached/templates/sysconfig.erb
@@ -1,5 +1,5 @@
-PORT=<%= port %>
+PORT=<%= @port %>
 USER=memcached
-MAXCONN=<%= maxconn %>
-CACHESIZE=<%= cachesize %>
-OPTIONS="<%= options %>"
+MAXCONN=<%= @maxconn %>
+CACHESIZE=<%= @cachesize %>
+OPTIONS="<%= @options %>"
